# pokemon-api

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
src/: error.rs  lib.rs
src/api/: base.rs  mod.rs
src/api/v2/: berries.rs  berry.rs  client.rs  endpoint.rs  mod.rs  resource.rs
src/models/v2/: berries.rs  berry.rs  common.rs  mod.rs  resource.rs
