[package]
name = "pokemon-api"
version = "0.1.0"
authors = ["Artem Korotkov <ars.korotkov@gmail.com>"]
description = "PokeApi v2 wrapper"
homepage = "https://github.com/artemkoff/pokemon-api"
repository = "https://github.com/artemkoff/pokemon-api"
edition = "2018"
license = "MIT"
keywords = ["pokemon", "api", "poke", "pokeapi"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }